<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common App Strings -->
    <string name="app_name">AdsPitcher</string>
    <string name="app_id">1530280607203165</string>
    <string name="cd_img">image</string>
    <string name="text_dummytext">Dummy text</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="OK">OK</string>
    <string name="text_zero">0</string>
    
    <!-- Splash Specific Strings -->
    <string name="text_splash_version">Version 1.0.0</string>
    
    <!-- Activity Action Bar Title Strings -->
    <string name="text_title_register">Register</string>
    <string name="text_title_signin">Sign In</string>
    <string name="text_title_search_results">Search Results</string>
    <string name="text_title_details">Details</string>
    <string name="text_title_write_review">Write review</string>
    
    <!-- Profile Specific Strings -->
    <string name="text_profile_page_heading">Profile</string>
    <string name="text_profile_edit_menu">Profile</string>
    <string name="text_profile_savepreferences_menu">Save</string>
    <string name="text_profile_name">Name</string>
    <string name="text_profile_email">Email</string>
    <string name="text_profile_credits">Credits</string>
    <string name="text_profile_currentlocation">CurrentLocation</string>
    <string name="text_profile_dob">Birth Date</string>
    <string name="text_profile_phonenumber">Phone Number</string>
    <string name="text_profile_taptoaddpic">Tap to add a profile picture</string>
    <string-array name="profile_tabs_array">
        <item>Info</item>
        <item>Reviews</item>
        <item>Preferences</item>
    </string-array>
    
    <!-- EditProfile Specific Strings -->
    <string name="text_editprofile_save">Save</string>
    <string name="text_editprofile_cancel">Cancel</string>
    <string name="text_editprofile_editsuccess">Data saved successfully.</string>
    
    <!-- Watermark Specific Strings -->
    <string name="text_watermark_name"><i>name</i></string>
    <string name="text_watermark_email"><i>email</i></string>
    <string name="text_watermark_password"><i>password</i></string>
    <string name="text_watermark_phonenumber"><i>phonenumber</i></string>
    <string name="text_watermark_birthdate"><i>birthdate</i></string>
    <string name="text_watermark_search"><i>search text (eg:40% bags)</i></string>
    
    <!-- Action Button Specific Strings -->
    <string name="text_button_signin">Sign In</string>
    <string name="text_button_register">Register</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_button_search">Search</string>
    
    <!-- Offers Item Specific Strings -->
    <string name="text_offeritem_views">Views: </string>
    <string name="text_offeritem_reviews">Reviews: </string>
    <string name="text_offeritem_up">Up: </string>
    <string name="text_offeritem_down">Down: </string>
    
    <!-- Offer Details Specific Strings -->
    <string name="text_offerdetail_action_share">Share</string>
    <string name="text_offerdetail_writereview">Write</string>
    
    <!-- Launch Activity Specific Strings -->
    <string name="text_launch_location">Location</string>
    <string name="text_launch_search">Search</string>
    <string name="text_launch_fav">Fav</string>
    <string name="text_launch_profile">Profile</string>
    <string name="text_launch_logout">Logout</string>
    <string name="text_launch_signup_benefits"><u>Sign up and see what more you can get out of the pitcher.</u></string>
    <string name="text_launch_benefits_notification">Get notified by your favorite brands for their latest offers and collections.</string>
    <string name="text_launch_benefits_rewards">Earn rewards when you dive-in the pitcher, sharing your reviews and rating various brands.</string>
    
    <!-- Login Specific Strings -->
    <string name="text_login_rememberme">Remember me</string>
    <string name="text_login_forgotpwd">Forgot Password</string>
    <string name="text_login_forgotpwd_details">An email with instructions to reset password has been sent to your registered email address. Please follow the instructions in email to reset your password.</string>
    
    <!-- Home Activity Specific Strings -->
    <string name="text_home_search">Search</string>
    <string-array name="home_tabs_array">
        <item>Latest</item>
        <item>Nearby</item>
        <item>Fav</item>
        <item>New Range</item>
        <item>Feeds</item>
    </string-array>
    
    <!-- Error Specific Strings -->
    <string name="error_network_problem">Please check the network connections available.</string>
    <string name="error_reading_data_from_server">Problem reading data from the server. Please try again later.</string>
    <string name="error_no_data_found">No data found.</string>
   
    <!-- Offers Details Screen Specific Strings -->
    <string-array name="offers_tabs_array">
        <item>Info</item>
        <item>Reviews</item>
    </string-array>
    
	<!-- Filter Specific Strings -->
	<string name="text_filter">Filter</string>
	<string name="text_filter_apply">Apply</string>
	<string name="text_filter_cancel">Cancel</string>
	<string name="text_filter_brands">Brands</string>
	<string name="text_filter_categories">Categories</string>
	<string name="text_filter_locations">Locations</string>
	
	<!-- Search Specific Strings -->
	<string name="text_search_results">Search Results</string>
	
	<!-- Write Review Specific Strings -->
	<string name="text_publish">Publish</string>
	
	<!-- Navigation Drawer Specific Strings -->
	<string-array name="navigation_drawer_array">
	    <item>Home</item>
	    <item>Profile</item>
        <item>Notifications</item>
        <item>Rate me</item>
        <item>About us</item>
        <item>Send feedback</item>
        <item>Sign Out</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Location Specific Strings -->
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
</resources>