<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/items_vertical_margin"
        android:background="@color/blue_background_color"
        android:paddingBottom="@dimen/items_vertical_padding"
        android:paddingTop="@dimen/items_vertical_padding" >

        <RelativeLayout
            android:id="@+id/relativelayout_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/button_cancel"
                style="@style/commonActionButtonStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/text_editprofile_cancel" />

            <ImageView
                android:id="@+id/img_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button_cancel"
                android:contentDescription="@string/cd_img"
                android:src="@drawable/ic_action_content_remove" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <RelativeLayout
            android:id="@+id/relativelayout_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/button_save"
                style="@style/commonActionButtonStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/text_editprofile_save" />

            <ImageView
                android:id="@+id/img_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button_save"
                android:contentDescription="@string/cd_img"
                android:src="@drawable/ic_action_content_save" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_user_image"
            style="@style/commonH1TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_content_new_picture"
            android:text="@string/text_profile_taptoaddpic" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_name"
                    style="@style/commonH1TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_name" />

                <EditText
                    android:id="@+id/edit_profile_name"
                    style="@style/commonEditTextStyle"
                    android:ems="10"
                    android:hint="@string/text_watermark_name"
                    android:inputType="textPersonName" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_email"
                    style="@style/commonH1TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_email" />

                <EditText
                    android:id="@+id/edit_profile_email"
                    style="@style/commonEditTextStyle"
                    android:ems="10"
                    android:hint="@string/text_watermark_email"
                    android:inputType="textEmailAddress" >
                </EditText>
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_dob"
                    style="@style/commonH1TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_dob" />
                
                <EditText
                    android:id="@+id/edit_profile_dob"
                    style="@style/commonEditTextStyle"
                    android:ems="10"
                    android:hint="@string/text_watermark_birthdate"
                    android:inputType="text" >
                </EditText>

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/label_phonenumber"
                    style="@style/commonH1TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_profile_phonenumber" />

                <EditText
                    android:id="@+id/edit_profile_phonenumber"
                    style="@style/commonEditTextStyle"
                    android:ems="10"
                    android:hint="@string/text_watermark_phonenumber"
                    android:inputType="phone" >
                </EditText>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>