<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/items_vertical_margin"
        android:background="@color/blue_background_color"
        android:paddingBottom="@dimen/items_vertical_padding"
        android:paddingTop="@dimen/items_vertical_padding" >

        <RelativeLayout
            android:id="@+id/relativelayout_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/button_cancel"
                style="@style/commonActionButtonStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/text_filter_cancel" />

            <ImageView
                android:id="@+id/img_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button_cancel"
                android:contentDescription="@string/cd_img"
                android:src="@drawable/ic_action_content_remove" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <RelativeLayout
            android:id="@+id/relativelayout_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/button_apply"
                style="@style/commonActionButtonStyle"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/text_filter_apply" />

            <ImageView
                android:id="@+id/img_button_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button_apply"
                android:contentDescription="@string/cd_img"
                android:src="@drawable/ic_action_navigation_accept" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_locations"
        style="@style/commonH1TextViewStyle"
        android:text="@string/text_filter_locations" />

    <ListView
        android:id="@+id/listView_filters_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawSelectorOnTop="true" >
    </ListView>

    <TextView
        android:id="@+id/textview_brands"
        style="@style/commonH1TextViewStyle"
        android:text="@string/text_filter_brands" />

    <ListView
        android:id="@+id/listView_filters_brands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawSelectorOnTop="true" >
    </ListView>

    <TextView
        android:id="@+id/textview_categories"
        style="@style/commonH1TextViewStyle"
        android:text="@string/text_filter_categories" />

    <ListView
        android:id="@+id/listView_filters_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawSelectorOnTop="true" >
    </ListView>

</LinearLayout>